--- a/DueNow/app/build.gradle
+++ b/DueNow/app/build.gradle
@@ -7,7 +7,7 @@ android {
     defaultConfig {
         multiDexEnabled true
         applicationId "database.duenow"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -27,10 +27,13 @@ android {
 
 dependencies {
     //compile fileTree(dir: 'libs', include: ['*.jar'])
-   // testCompile 'junit:junit:4.12'
+    // testCompile 'junit:junit:4.12'
+    //  compile 'joda-time:joda-time:2.3'
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:cardview-v7:23.0.0'
+    compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.pkmmte.view:circularimageview:1.1'
-  //  compile 'joda-time:joda-time:2.3'
-    compile 'com.firebase:firebase-client-android:2.5.2+'
+    compile 'com.firebase:firebase-client-android:2.5.2'
+    compile 'com.firebaseui:firebase-ui:0.3.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.6.0'
+    compile 'org.twitter4j:twitter4j-core:4.0.2'
 }
