--- a/DueNow/app/src/main/AndroidManifest.xml
+++ b/DueNow/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         <uses-permission android:name="android.permission.INTERNET" />
 
         <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+        <meta-data
+            android:name="com.firebase.ui.TwitterKey"
+            android:value="@string/twitter_app_key" />
+        <meta-data
+            android:name="com.firebase.ui.TwitterSecret"
+            android:value="@string/twitter_app_secret" />
+
+        <activity
             android:name="duenow.main.MainActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan" >
