--- a/DueNow/app/src/main/AndroidManifest.xml
+++ b/DueNow/app/src/main/AndroidManifest.xml
@@ -11,16 +11,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <uses-permission android:name="android.permission.INTERNET" />
-
         <activity
-            android:name="duenow.main.MainActivity"
-            android:label="@string/app_name"
-            android:windowSoftInputMode="adjustPan" >
+            android:name="duenow.notifications.NotifyUser">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="duenow.main.MainActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
+
         </activity>
         <activity
             android:name="duenow.main.LoginActivity"
