--- a/DueNow/app/src/main/AndroidManifest.xml
+++ b/DueNow/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="duenow.decoratorfactory">
 
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -10,21 +11,21 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <uses-permission android:name="android.permission.INTERNET" />
-        <meta-data
-            android:name="com.facebook.FacebookActivity"
-            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:label="@string/app_name" />
 
-        <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
-        <meta-data
-            android:name="com.firebase.ui.TwitterKey"
-            android:value="@string/twitter_app_key" />
-        <meta-data
-            android:name="com.firebase.ui.TwitterSecret"
-            android:value="@string/twitter_app_secret" />
+        <!--<meta-data-->
+            <!--android:name="com.facebook.FacebookActivity"-->
+            <!--android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"-->
+            <!--android:label="@string/app_name" />-->
+
+        <!--<meta-data-->
+            <!--android:name="com.facebook.sdk.ApplicationId"-->
+            <!--android:value="@string/facebook_app_id" />-->
+        <!--<meta-data-->
+            <!--android:name="com.firebase.ui.TwitterKey"-->
+            <!--android:value="@string/twitter_app_key" />-->
+        <!--<meta-data-->
+            <!--android:name="com.firebase.ui.TwitterSecret"-->
+            <!--android:value="@string/twitter_app_secret" />-->
 
         <activity
             android:name="duenow.main.MainActivity"
@@ -36,9 +37,26 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name="duenow.main.LoginActivity"
-            android:label="@string/title_activity_login"></activity>
+            android:label="@string/title_activity_login">
+        </activity>
+
+
+        <activity android:name="duenow.notifications.NotifyUser"
+            android:label="NotifyUser">
+        </activity>
+
+        <receiver
+            android:process=":remote"
+            android:name="duenow.notifications.NotificationMaker">
+        </receiver>
+
+        <receiver
+            android:process=":remote"
+            android:name="duenow.notifications.NotificationReceiver">
+        </receiver>
     </application>
 
 </manifest>
