--- a/DueNow/app/src/main/AndroidManifest.xml
+++ b/DueNow/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:allowBackup="true"
@@ -31,11 +32,6 @@
             android:name="duenow.main.MainActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity
@@ -46,12 +42,18 @@
 
         <activity android:name="duenow.notifications.NotifyUser"
             android:label="NotifyUser">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
         </activity>
 
         <receiver
             android:process=":remote"
             android:name="duenow.notifications.NotificationMaker">
-        </receiver>
+            </receiver>
 
         <receiver
             android:process=":remote"
