--- a/DueNow/app/build.gradle
+++ b/DueNow/app/build.gradle
@@ -29,11 +29,12 @@ dependencies {
     //compile fileTree(dir: 'libs', include: ['*.jar'])
     // testCompile 'junit:junit:4.12'
     //  compile 'joda-time:joda-time:2.3'
+	compile 'com.wdullaer:materialdatetimepicker:2.3.0'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.pkmmte.view:circularimageview:1.1'
     compile 'com.firebase:firebase-client-android:2.5.2'
     compile 'com.firebaseui:firebase-ui:0.3.1'
-    compile 'com.facebook.android:facebook-android-sdk:4.6.0'
-    compile 'org.twitter4j:twitter4j-core:4.0.2'
+    //compile 'com.facebook.android:facebook-android-sdk:4.6.0'
+    //compile 'org.twitter4j:twitter4j-core:4.0.2'
 }
