--- a/DueNow/app/build.gradle
+++ b/DueNow/app/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     //compile fileTree(dir: 'libs', include: ['*.jar'])
     // testCompile 'junit:junit:4.12'
     //  compile 'joda-time:joda-time:2.3'
+   // compile files('libs/jackson-databind-2.2.0.jar')
+    //compile files('libs/jackson-annotations-2.2.0.jar')
+    //compile files('libs/jackson-core-2.2.0.jar')
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.pkmmte.view:circularimageview:1.1'
