--- a/DueNow/app/build.gradle
+++ b/DueNow/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     //compile fileTree(dir: 'libs', include: ['*.jar'])
     // testCompile 'junit:junit:4.12'
     //  compile 'joda-time:joda-time:2.3'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 	compile 'com.wdullaer:materialdatetimepicker:2.3.0'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
