--- a/DueNow/app/src/main/AndroidManifest.xml
+++ b/DueNow/app/src/main/AndroidManifest.xml
@@ -32,11 +32,7 @@
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan"
 			android:parentActivityName="duenow.main.AddTaskActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity
@@ -62,7 +58,13 @@
             android:name="duenow.main.AddTaskActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan"
-			android:parentActivityName="duenow.main.MainActivity"></activity>
+			android:parentActivityName="duenow.main.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
     </application>
 
