--- a/DueNow/app/build.gradle
+++ b/DueNow/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     // testCompile 'junit:junit:4.12'
     //  compile 'joda-time:joda-time:2.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:design:23.1.1'
    // compile files('libs/jackson-databind-2.2.0.jar')
     //compile files('libs/jackson-annotations-2.2.0.jar')
     //compile files('libs/jackson-core-2.2.0.jar')
